<resources>
    <string name="app_name">Your Contacts App-Address Book</string>
    <string name="action_settings">Settings</string>
    <string name="txtName1">Jessica Jones</string>
    <string name="txtName2">Harold Johnson</string>
    <string name="btnName1">View Contact</string>
    <string name="btnName2">View Contact</string>
    <string name="txtContact1">Jessica Jones</string>
    <string name="txtContact2">Harold Johnson</string>
    <string name="txtAddress1">2230 Drew St. Clearwater, fl, 33765</string>
    <string name="txtPhone1">(727)222-2222</string>
    <string name="description">Contact1 image</string>
    <string name="txtAddress2">130 Sabal Ct, oldsmar fl, 34677</string>
    <string name="txtPhone2">(727)111-1111</string>
    <string name="description2">Contact2 Image</string>
    <string name="txtLIst">Contact List</string>
    <string name="title_activity_contact1">Contact1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
